--- a/anotherTodo/Base.lproj/Main.storyboard
+++ b/anotherTodo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vSB-dj-h3L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KnG-0U-osN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Createtask View Controller-->
         <scene sceneID="bde-Ev-3ad">
             <objects>
-                <viewController id="vSB-dj-h3L" customClass="CreateTaskViewController" customModule="anotherTodo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateTaskViewController" id="vSB-dj-h3L" customClass="CreateTaskViewController" customModule="anotherTodo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PlP-xG-IJY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -82,6 +82,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QFg-VT-2bq"/>
                     </view>
+                    <navigationItem key="navigationItem" id="uXL-La-IBJ"/>
                     <connections>
                         <outlet property="createButton" destination="wws-c6-4Ba" id="br4-NL-4hj"/>
                         <outlet property="dueDateTextField" destination="YGy-qj-1jt" id="Pg3-TJ-Tkn"/>
@@ -95,7 +96,92 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="470" y="33"/>
+            <point key="canvasLocation" x="959" y="393"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Y8V-Ae-OHf">
+            <objects>
+                <navigationController id="KnG-0U-osN" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Srn-AH-b2z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2SP-lj-adP" kind="relationship" relationship="rootViewController" id="NBY-vZ-2MK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kiK-9e-rdr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="602" y="-328"/>
+        </scene>
+        <!--Tasklist View Controller-->
+        <scene sceneID="3nR-s9-8cX">
+            <objects>
+                <viewController id="2SP-lj-adP" customClass="TaskListViewController" customModule="anotherTodo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MXL-ia-UwX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oTP-lb-xUZ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="taskCell" textLabel="fE7-DT-fSI" detailTextLabel="6dB-9A-tpF" style="IBUITableViewCellStyleValue1" id="Hst-Vk-SbN">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hst-Vk-SbN" id="xKG-Qg-PfK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fE7-DT-fSI">
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6dB-9A-tpF">
+                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.64899013500000002" green="0.59734968610000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oTP-lb-xUZ" firstAttribute="top" secondItem="2K9-ij-eWb" secondAttribute="top" id="3Ov-Rr-0lU"/>
+                            <constraint firstItem="oTP-lb-xUZ" firstAttribute="leading" secondItem="2K9-ij-eWb" secondAttribute="leading" id="FTP-Tl-sHH"/>
+                            <constraint firstItem="oTP-lb-xUZ" firstAttribute="trailing" secondItem="2K9-ij-eWb" secondAttribute="trailing" id="P1B-Cq-FP8"/>
+                            <constraint firstItem="oTP-lb-xUZ" firstAttribute="bottom" secondItem="2K9-ij-eWb" secondAttribute="bottom" id="Xkp-v0-vYq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2K9-ij-eWb"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Task" id="HdP-7d-Rm8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Hkf-iF-YMu">
+                            <color key="tintColor" red="0.64899013500000002" green="0.59734968610000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addBarButtonDidTouched:" destination="2SP-lj-adP" id="V4D-eu-SVd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableVIew" destination="oTP-lb-xUZ" id="uJA-Yc-c26"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YjP-dg-a5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="upO-hh-M9A" customClass="TaskListModuleInitializer" customModule="anotherTodo" customModuleProvider="target">
+                    <connections>
+                        <outlet property="tasklistViewController" destination="2SP-lj-adP" id="BCa-Uo-ary"/>
+                    </connections>
+                </customObject>
+            </objects>
+            <point key="canvasLocation" x="1369" y="-292"/>
         </scene>
     </scenes>
 </document>
