--- a/anotherTodo/Base.lproj/Main.storyboard
+++ b/anotherTodo/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="taskCell" textLabel="fE7-DT-fSI" detailTextLabel="6dB-9A-tpF" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="Hst-Vk-SbN">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="taskCell" textLabel="fE7-DT-fSI" detailTextLabel="6dB-9A-tpF" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="Hst-Vk-SbN">
                                         <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hst-Vk-SbN" id="xKG-Qg-PfK">
